--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
     <!-- HEADER -->
     <header>
-      <div class="container text-center mt-4">
+      <div class="container text-center my-5">
         <div class="row">
           <div class="col">
             <h1>RESPONSIVE WEB DESIGN</h1>
@@ -126,47 +126,7 @@
     </header>
 
     <section>
-      <div class="container">
-        <div class="card" style="width: 18rem">
-          <img src="..." class="card-img-top" alt="..." />
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
-            </p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
-        </div>
-
-        <div class="card" style="width: 18rem">
-          <img src="..." class="card-img-top" alt="..." />
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
-            </p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
-        </div>
-
-        <div class="card" style="width: 18rem">
-          <img src="..." class="card-img-top" alt="..." />
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
-            </p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section>
-      <div class="container">
+      <div class="container my-5">
         <div
           id="carouselExampleCaptions"
           class="carousel slide"
@@ -258,37 +218,81 @@
     </section>
 
     <section>
-      <section id="Contacto" class="container my-5">
-        <h2 class="display-4 fw-bold text-center my-4">
-          Contacto
-        </h2>
-        <form>
-          <div class="form-group mb-4">
-            <!-- <label class="mb-2">Nombre</label> -->
-            <input class="form-control" placeholder="Nombre" />
+      <div class="container my-5">
+        <div class="row">
+          <div class="col-md-4">
+            <div class="card" style="width: 18rem">
+              <img src="..." class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
           </div>
 
-          <div class="form-group mb-4">
-            <!-- <label class="mb-2">Correo electrónico</label> -->
-            <input class="form-control" placeholder="Correo electrónico" />
+          <div class="col-md-4">
+            <div class="card" style="width: 18rem">
+              <img src="..." class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
           </div>
 
-          <div class="form-group">
-            <!-- <label class="mb-2">Mensaje</label> -->
-            <textarea
-              class="form-control"
-              placeholder="Escribe aquí tu mensaje"
-            ></textarea>
+          <div class="col-md-4">
+            <div class="card" style="width: 18rem">
+              <img src="..." class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
           </div>
-
-          <div class="my-3 text-end">
-            <button class="btn text-dark fw-bold">Enviar</button>
-          </div>
-        </form>
-      </section>
+        </div>
+      </div>
     </section>
 
-    <footer class="bg-dark text-center text-light p-4 link-contacto">
+    <section class="container my-5">
+      <h2 class="display-4 fw-bold text-center my-4">Contacto</h2>
+      <form>
+        <div class="form-group mb-4">
+          <!-- <label class="mb-2">Nombre</label> -->
+          <input class="form-control" placeholder="Nombre" />
+        </div>
+
+        <div class="form-group mb-4">
+          <!-- <label class="mb-2">Correo electrónico</label> -->
+          <input class="form-control" placeholder="Correo electrónico" />
+        </div>
+
+        <div class="form-group">
+          <!-- <label class="mb-2">Mensaje</label> -->
+          <textarea
+            class="form-control"
+            placeholder="Escribe aquí tu mensaje"
+          ></textarea>
+        </div>
+
+        <div class="my-3 text-end">
+          <button class="btn text-dark fw-bold">Enviar</button>
+        </div>
+      </form>
+    </section>
+
+    <footer class="bg-dark text-center text-light p-4">
       <p class="mb-0">Gerardo Apablaza 2022. Todos los derechos reservados.</p>
     </footer>
 
