se agregan clases responsive y se editan tamaños de imagenes

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img
-                src="./assets/img/card_1.png"
+                src="./assets/img/carrusel01.jpg"
                 class="d-block w-100"
                 alt="..."
               />
@@ -170,7 +170,7 @@
             </div>
             <div class="carousel-item">
               <img
-                src="./assets/img/card_2.png"
+                src="./assets/img/carrusel02.jpg"
                 class="d-block w-100"
                 alt="..."
               />
@@ -183,7 +183,7 @@
             </div>
             <div class="carousel-item">
               <img
-                src="./assets/img/card_3.jpg"
+                src="./assets/img/carrusel03.jpg"
                 class="d-block w-100"
                 alt="..."
               />
@@ -218,11 +218,11 @@
     </section>
 
     <section>
-      <div class="container my-5">
-        <div class="row">
-          <div class="col-md-4">
-            <div class="card" style="width: 18rem">
-              <img src="..." class="card-img-top" alt="..." />
+      <div class="container-fluid my-5">
+        <div class="row mx-auto">
+          <div class="col-md-6 col-lg-4">
+            <div class="card" style="width: 100%">
+              <img src="./assets/img/card_1.png" class="img-fluid" alt="..." />
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">
@@ -234,9 +234,9 @@
             </div>
           </div>
 
-          <div class="col-md-4">
-            <div class="card" style="width: 18rem">
-              <img src="..." class="card-img-top" alt="..." />
+          <div class="col-md-6 col-lg-4">
+            <div class="card" style="width: 100%">
+              <img src="./assets/img/card_2.png" class="img-fluid" alt="..." />
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">
@@ -248,9 +248,9 @@
             </div>
           </div>
 
-          <div class="col-md-4">
-            <div class="card" style="width: 18rem">
-              <img src="..." class="card-img-top" alt="..." />
+          <div class="col-md-6 col-lg-4">
+            <div class="card" style="width: 100%">
+              <img src="./assets/img/card_3.jpg" class="img-fluid" alt="..." />
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">
@@ -261,6 +261,7 @@
               </div>
             </div>
           </div>
+
         </div>
       </div>
     </section>
