--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     >
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img src="./assets/img/logo.png" alt="logo" />
+          <img src="./assets/img/logo-2.png" alt="logo" />
         </a>
 
         <button
@@ -115,16 +115,29 @@
       <div class="container text-center my-5">
         <div class="row">
           <div class="col">
-            <h1>RESPONSIVE WEB DESIGN</h1>
-            <p>
-              Hola, soy Gerardo, tecnico en electrónica con experiencia en
-              programación y diseño web.
-            </p>
+            <h1>Hola, Soy Gerardo Apablaza</h1>
+            <div class="col-lg-8 my-4">
+              <p class="fst-italic text-start">
+                Hola soy Gerardo! aqui va un resumen personal, pero no se como
+                empezarlo... soy de santiago (sector sur de la capitale), tengo
+                33 años, padre de un gordo hermoso de 8 años, soy fanático de
+                las placas de desarrollo ESP32 y amante de las luces RGB. <br />
+                <br />
+                Tengo 2 acuarios, una Gata llamada Zafira y un Hámster "Panda".
+                <br /><br />
+                Tengo una Reina por la cual daría mi vida y se llama Verónica,
+                mi amada compañera de vida. NOTA ANECDÓTICA: El hecho que mi
+                madre me vendió a mi <del>dueña</del> compañera por una
+                miserable <del>(pero deliciosa)</del> cajetilla de cigarros (una
+                de 20') click.
+              </p>
+            </div>
           </div>
         </div>
       </div>
     </header>
 
+    <!-- CAROUSEL -->
     <section>
       <div class="container my-5">
         <div
@@ -159,13 +172,11 @@
               <img
                 src="./assets/img/carrusel01.jpg"
                 class="d-block w-100"
-                alt="..."
+                alt="sensor_en_construccion"
               />
               <div class="carousel-caption d-none d-md-block">
-                <h5>First slide label</h5>
-                <p>
-                  Some representative placeholder content for the first slide.
-                </p>
+                <h5 class="text-dark fw-bold">Sensor Prototipo</h5>
+                <p class="text-dark">Captura de Microdatos Medioambientales.</p>
               </div>
             </div>
             <div class="carousel-item">
@@ -175,10 +186,8 @@
                 alt="..."
               />
               <div class="carousel-caption d-none d-md-block">
-                <h5>Second slide label</h5>
-                <p>
-                  Some representative placeholder content for the second slide.
-                </p>
+                <h5 class="fw-bold">UPS Prototipo para Comunicaciones LORA</h5>
+                <p>Equipo UPS para Sensores Conectados a Red LORA.</p>
               </div>
             </div>
             <div class="carousel-item">
@@ -188,10 +197,8 @@
                 alt="..."
               />
               <div class="carousel-caption d-none d-md-block">
-                <h5>Third slide label</h5>
-                <p>
-                  Some representative placeholder content for the third slide.
-                </p>
+                <h5 class="fw_bold">Placa PCB en Testing</h5>
+                <p>Sistema Manual/Auto para Regadores Aljibes Minera Spence.</p>
               </div>
             </div>
           </div>
@@ -217,55 +224,114 @@
       </div>
     </section>
 
+    <!-- TRABAJOS-DESAFIOLATAM -->
     <section>
       <div class="container-fluid my-5">
         <div class="row mx-auto">
-          <div class="col-md-6 col-lg-4">
+          <div class="col-md-6 col-lg-4 my-3">
             <div class="card" style="width: 100%">
-              <img src="./assets/img/card_1.png" class="img-fluid" alt="..." />
+              <img src="./assets/img/card-1.png" class="img-fluid" alt="..." />
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">CV HTML</h5>
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
+                  Curriculum Vitae básico con etiquetas de HTML.
                 </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <div class="container text-end">
+                  <a
+                    href="https://github.com/d0gma-x/fullstack_js_DesafioLatam_g28/tree/main/HTML"
+                    target="_blank"
+                    class="btn btn-warning fw-bold"
+                    >Ir al Repo</a
+                  >
+                </div>
               </div>
             </div>
           </div>
 
-          <div class="col-md-6 col-lg-4">
+          <div class="col-md-6 col-lg-4 my-3">
             <div class="card" style="width: 100%">
-              <img src="./assets/img/card_2.png" class="img-fluid" alt="..." />
+              <img src="./assets/img/card-2.png" class="img-fluid" alt="..." />
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
-                </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <h5 class="card-title">E-commerce CSS</h5>
+                <p class="card-text">Tienda diseñada con HTML + CSS.</p>
+                <div class="container text-end">
+                  <a
+                    href="https://github.com/d0gma-x/fullstack_js_DesafioLatam_g28/tree/main/CSS"
+                    target="_blank"
+                    class="btn btn-warning fw-bold"
+                    >Ir al Repo</a
+                  >
+                </div>
               </div>
             </div>
           </div>
 
-          <div class="col-md-6 col-lg-4">
+          <div class="col-md-6 col-lg-4 my-3">
             <div class="card" style="width: 100%">
-              <img src="./assets/img/card_3.jpg" class="img-fluid" alt="..." />
+              <img src="./assets/img/card-3.png" class="img-fluid" alt="..." />
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">Iguana Page Posicionamiento</h5>
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
+                  Página Iguanas para práctica de posicionamiento y etiquetas
+                  "display"
                 </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <div class="container text-end">
+                  <a
+                    href="https://github.com/d0gma-x/fullstack_js_DesafioLatam_g28/tree/main/Posicionamiento"
+                    target="_blank"
+                    class="btn btn-warning fw-bold"
+                    >Ir al Repo</a
+                  >
+                </div>
               </div>
             </div>
           </div>
 
+          <div class="col-md-6 col-lg-4 my-3">
+            <div class="card" style="width: 100%">
+              <img src="./assets/img/card-4.png" class="img-fluid" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Cuppon - Bootstrap5</h5>
+                <p class="card-text">
+                  Tienda de Cupones utilizando el framework Bootstrap
+                </p>
+                <div class="container text-end">
+                  <a
+                    href="https://github.com/d0gma-x/fullstack_js_DesafioLatam_g28/tree/main/Bootstrap/Cuppon"
+                    target="_blank"
+                    class="btn btn-warning fw-bold"
+                    >Ir al Repo</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-4 my-3">
+            <div class="card" style="width: 100%">
+              <img src="./assets/img/card-5.png" class="img-fluid" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Bootstrap5 - Github</h5>
+                <p class="card-text">
+                  Fork desde Github a Portafolio de un Tercero el cual se
+                  modifico usando clases de Bootstrap
+                </p>
+                <div class="container text-end">
+                  <a
+                    href="https://github.com/d0gma-x/fdsw-github"
+                    target="_blank"
+                    class="btn btn-warning fw-bold"
+                    >Ir al Repo</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
 
+    <!-- FORM-CONTACT -->
     <section class="container my-5">
       <h2 class="display-4 fw-bold text-center my-4">Contacto</h2>
       <form>
@@ -288,15 +354,17 @@
         </div>
 
         <div class="my-3 text-end">
-          <button class="btn text-dark fw-bold">Enviar</button>
+          <button class="btn btn-warning text-dark fw-bold">Enviar</button>
         </div>
       </form>
     </section>
 
+    <!-- FOOTER -->
     <footer class="bg-dark text-center text-light p-4">
       <p class="mb-0">Gerardo Apablaza 2022. Todos los derechos reservados.</p>
     </footer>
 
+    <!-- SCRIPT-JS-PARA-BOOTSTRAP-v5 -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
